---------------------------------------------------------------------------------------------------
Version: 0.69.123
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.122
Date: 2025-11-05
  Changes:
    - Trashsteroid shields now spoil in 2 ticks. This blocks weird mods that let you collect trashsteroid remains from giving you free, useless shields. This fixes an issue right now for Schall Remains, but is future proof.
---------------------------------------------------------------------------------------------------
Version: 0.69.121
Date: 2025-10-29
  Changes:
    - Carbon steel compatibility.
    - Rebalanced utility sci and promethium sci recipes for when K2SO are installed.
    - Quick fix to try to give compat for Global Tick Time Scale landing cutscene crash. Also tried to fix balance so you wouldn't get totally screwed (probably). I would still not consider this mod to be fully compatible with GTTS, and it will very likely crash later on. However, I will continue monitoring the situation. If I get another crash report related to GTTS, I'm going to mark it as incompatible. I'm putting this in writing so people can't get mad later.
    - Fixed crash in multiplayer when banning someone who is not in the game.
---------------------------------------------------------------------------------------------------
Version: 0.69.120
Date: 2025-10-21
  Changes:
    - Fixed K2SO compat issue with pumpjacks..
    - Forcing everyone up versions of machine upgrades with bugfixes.
    - Cheaper delete gleba now has proper messages.
    - Operation Iron Man now costs space science to research. Please let me know if this causes issues with overhauls, as this primarilly targets K2SO.
    - Prettied up Rubia planet brief simulation.
---------------------------------------------------------------------------------------------------
Version: 0.69.119
Date: 2025-09-23
  Changes: